feat: extend api spec to handle more cases
